# miner-tracker

./: .gitignore  Overview.py  config.yaml  pyproject.toml  requirements.txt
data/: miner_tracker.db
data/compare/: 2024-08-01_quarterly-activities-report_02835157.deepseek-v4-flash.json  2024-08-01_quarterly-activities-report_02835157.deepseek-v4-pro.json  2024-08-01_quarterly-activities-report_02835157.deepseek.json  2024-08-01_quarterly-activities-report_02835157.haiku.json  2024-08-30_appendix-4e-preliminary-final-report_02847994.deepseek.json  2024-08-30_appendix-4e-preliminary-final-report_02847994.haiku.json  2024-09-24_annual-report-to-shareholders_02857608.deepseek.json  2024-10-30_quarterly-activities-report_02875053.deepseek.json  2024-10-30_quarterly-activities-report_02875053.haiku.json  2025-01-31_quarterly-activities-report_02909393.deepseek.json  2025-01-31_quarterly-activities-report_02909393.haiku.json  2025-02-27_appendix-4d-and-2024-half-year-financial-report_02920313.deepseek.json  2025-02-27_appendix-4d-and-2024-half-year-financial-report_02920313.haiku.json  2025-04-28_quarterly-activities-report_02941361.deepseek.json  2025-04-28_quarterly-activities-report_02941361.haiku.json  2025-07-31_quarterly-activities-report_02975072.deepseek.json  report.txt  (+13 more)
miner_tracker/: __main__.py  config.py  db.py  fx.py  market.py  npv.py  paths.py  queries.py  secrets.py  seeds.py  ui.py
pages/: 1_Reserves.py  2_NPV_Model.py  3_Extraction_Review.py
scripts/: compare_providers.py  validate_vs_xlsx.py
tests/: test_db.py  test_npv.py  test_pipeline.py
(+7 files in other folders)
